[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Kenny Pixel Shmup/Tiles/tile_0016.png" type="Texture" id=1]
[ext_resource path="res://Assets/Kenny Pixel Shmup/Tiles/tile_0018.png" type="Texture" id=2]
[ext_resource path="res://Enemies/FlakCannon.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="FlakCannon" type="StaticBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 3 )

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 1 )

[node name="Head" type="Node2D" parent="."]

[node name="Head" type="Sprite" parent="Head"]
rotation = -1.5708
texture = ExtResource( 2 )

[node name="SpawnPoint" type="Node2D" parent="Head"]
position = Vector2( 16, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="WallDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetector"]
shape = SubResource( 2 )

[node name="GunCooldown" type="Timer" parent="."]
wait_time = 4.0
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="WallDetector" to="." method="_on_WallDetector_body_entered"]
[connection signal="timeout" from="GunCooldown" to="." method="_on_GunCooldown_timeout"]
